Bug #3816
open"zfs allow" mis-displays filesystems with "allow -c" but not "allow -s" set
0%
Description
If you add a "create-time permission" with "zfs allow -c" to a filesystem that doesn't have any permission-sets defined, zfs allow mis-displays the permissions - it labels the "Create-time permissions" as "Permission sets".
If you add a permission set definition, the right thing happens:
to reproduce:
zfs create tank/test
zfs allow -c send tank/test
zfs allow tank/test
[this is where you get erroneous output]
zfs allow -s @foo receive tank/test
zfs allow tank/test
[this is where you get correct output]
Bug appears to be in usr/src/cmd/zfs/zfs_main.c : print_set_creat_perms(). Looks like it should be using the return value of who_type2weight() to index into sc_title[] rather than assuming there will always be a permission set present if there are create-time permissions.
Files
Related issues
Updated by Marcel Telka almost 9 years ago
- Category set to zfs - Zettabyte File System
Updated by Bill Sommerfeld almost 9 years ago
FYI I've got a patch for this that I need to clean up and share.
Updated by Bill Sommerfeld almost 9 years ago
- File 3816.patch 3816.patch added
I've attached what I have now; probably could be improved.