3816 "zfs allow" mis-displays filesystems with "allow -c" but not "allow -s" set Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Rich Lowe <richlowe@richlowe.net> Approved by: Gordon Ross <gordon.w.ross@gmail.com>